PDA: Remove debugging code from Grako parser

--- a/pda/Makefile
+++ b/pda/Makefile
@@ -1,6 +1,7 @@
 EGREP := grep -E
 GRAKO := grako
 PYTEST := py.test
+SED := sed
 
 IMPORTS_REGEX := '^[[:space:]]*from[[:space:]]+(__future__|\.|pda)'
 
@@ -11,7 +12,10 @@ run_pda.py: pda/core.py pda/autogen.py pda/parser.py pda/driver.py
 
 parsers: pda/autogen.py
 
-pda/autogen.py: pda/pda.grako
+pda/autogen.py: pda/autogen_orig.py
+	$(SED) --quiet --expression='/^if __name__ ==/q; p' $< > $@
+
+pda/autogen_orig.py: pda/pda.grako
 	$(GRAKO) $< --output $@ --name PDA
 
 test: parsers
