PDA: Make driver executable

--- a/pda/Makefile
+++ b/pda/Makefile
@@ -8,7 +8,9 @@ IMPORTS_REGEX := '^[[:space:]]*from[[:space:]]+(__future__|\.|pda)'
 all: run_pda.py
 
 run_pda.py: pda/core.py pda/autogen.py pda/parser.py pda/driver.py
-	$(EGREP) --invert-match --no-filename $(IMPORTS_REGEX) $+ > $@
+	echo '#!/usr/bin/env python3' > $@
+	$(EGREP) --invert-match --no-filename $(IMPORTS_REGEX) $+ >> $@
+	chmod +x $@
 
 parsers: pda/autogen.py
 
